--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <script src="/js/vconsole.min.js"></script>
     <script src="/js/jweixin-1.6.0.js"></script>
     <script src="/js/html2canvas.min.js"></script>
+
+    <script>
+        var el = document.createElement('link'); el.rel = 'manifest'; el.href = 'manifest.json?_t=' + new Date().getTime(); document.head.appendChild(el);
+    </script>
 </head>
 
 <body>
